// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range disabled 1`] = `
.c4 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  -webkit-transform: translateZ(0) translateX(-50%);
  -ms-transform: translateZ(0) translateX(-50%);
  transform: translateZ(0) translateX(-50%);
  white-space: nowrap;
  position: absolute;
  top: 10px;
}

.is-disabled .c4 {
  color: #E2E6E3;
}

.c3 {
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border: 1px solid #1785FB;
  border-radius: 100%;
  cursor: pointer;
  display: block;
  height: 12px;
  margin-left: -6px;
  margin-top: -7px;
  outline: none;
  position: absolute;
  top: 50%;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
}

.c5:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.is-disabled .c5 {
  background: #F5F5F5;
  border: 1px solid #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c5:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
}

.is-disabled .c1 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
}

.is-disabled .c2 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c2 {
  background: #E2E6E3;
}

.c0 {
  position: relative;
  width: 200px;
}

<div
  className="is-disabled c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  width={200}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      style={
        Object {
          "left": "0%",
          "width": "50%",
        }
      }
    />
    <span
      className="c3"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span
        className="c4"
      >
        20
      </span>
      <div
        className="c5"
        draggable={undefined}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Range maxValue 1`] = `
.c4 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  -webkit-transform: translateZ(0) translateX(-50%);
  -ms-transform: translateZ(0) translateX(-50%);
  transform: translateZ(0) translateX(-50%);
  white-space: nowrap;
  position: absolute;
  top: 10px;
}

.is-disabled .c4 {
  color: #E2E6E3;
}

.c3 {
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border: 1px solid #1785FB;
  border-radius: 100%;
  cursor: pointer;
  display: block;
  height: 12px;
  margin-left: -6px;
  margin-top: -7px;
  outline: none;
  position: absolute;
  top: 50%;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
}

.c5:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.is-disabled .c5 {
  background: #F5F5F5;
  border: 1px solid #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c5:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
}

.is-disabled .c1 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
}

.is-disabled .c2 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c2 {
  background: #E2E6E3;
}

.c0 {
  position: relative;
  width: 200px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  width={200}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      style={
        Object {
          "left": "0%",
          "width": "0%",
        }
      }
    />
    <span
      className="c3"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span
        className="c4"
      >
        0
      </span>
      <div
        className="c5"
        draggable={undefined}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Range minValue 1`] = `
.c4 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  -webkit-transform: translateZ(0) translateX(-50%);
  -ms-transform: translateZ(0) translateX(-50%);
  transform: translateZ(0) translateX(-50%);
  white-space: nowrap;
  position: absolute;
  top: 10px;
}

.is-disabled .c4 {
  color: #E2E6E3;
}

.c3 {
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border: 1px solid #1785FB;
  border-radius: 100%;
  cursor: pointer;
  display: block;
  height: 12px;
  margin-left: -6px;
  margin-top: -7px;
  outline: none;
  position: absolute;
  top: 50%;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
}

.c5:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.is-disabled .c5 {
  background: #F5F5F5;
  border: 1px solid #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c5:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
}

.is-disabled .c1 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
}

.is-disabled .c2 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c2 {
  background: #E2E6E3;
}

.c0 {
  position: relative;
  width: 200px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  width={200}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      style={
        Object {
          "left": "0%",
          "width": "0%",
        }
      }
    />
    <span
      className="c3"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span
        className="c4"
      >
        10
      </span>
      <div
        className="c5"
        draggable={undefined}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Range renders without crashing 1`] = `
.c4 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  -webkit-transform: translateZ(0) translateX(-50%);
  -ms-transform: translateZ(0) translateX(-50%);
  transform: translateZ(0) translateX(-50%);
  white-space: nowrap;
  position: absolute;
  top: 10px;
}

.is-disabled .c4 {
  color: #E2E6E3;
}

.c3 {
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border: 1px solid #1785FB;
  border-radius: 100%;
  cursor: pointer;
  display: block;
  height: 12px;
  margin-left: -6px;
  margin-top: -7px;
  outline: none;
  position: absolute;
  top: 50%;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
}

.c5:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.is-disabled .c5 {
  background: #F5F5F5;
  border: 1px solid #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c5:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
}

.is-disabled .c1 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
}

.is-disabled .c2 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c2 {
  background: #E2E6E3;
}

.c0 {
  position: relative;
  width: 200px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  width={200}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      style={
        Object {
          "left": "0%",
          "width": "0%",
        }
      }
    />
    <span
      className="c3"
      style={
        Object {
          "left": "0%",
        }
      }
    >
      <span
        className="c4"
      >
        0
      </span>
      <div
        className="c5"
        draggable={undefined}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Range value 1`] = `
.c4 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  -webkit-transform: translateZ(0) translateX(-50%);
  -ms-transform: translateZ(0) translateX(-50%);
  transform: translateZ(0) translateX(-50%);
  white-space: nowrap;
  position: absolute;
  top: 10px;
}

.is-disabled .c4 {
  color: #E2E6E3;
}

.c3 {
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border: 1px solid #1785FB;
  border-radius: 100%;
  cursor: pointer;
  display: block;
  height: 12px;
  margin-left: -6px;
  margin-top: -7px;
  outline: none;
  position: absolute;
  top: 50%;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
}

.c5:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.is-disabled .c5 {
  background: #F5F5F5;
  border: 1px solid #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c5:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
}

.is-disabled .c1 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
}

.is-disabled .c2 {
  background: #E2E6E3;
  cursor: not-allowed;
}

.is-disabled .c2 {
  background: #E2E6E3;
}

.c0 {
  position: relative;
  width: 200px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  width={200}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      style={
        Object {
          "left": "0%",
          "width": "50%",
        }
      }
    />
    <span
      className="c3"
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span
        className="c4"
      >
        20
      </span>
      <div
        className="c5"
        draggable={undefined}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
      />
    </span>
  </div>
</div>
`;
